--- a/AlterarCadastro.html
+++ b/AlterarCadastro.html
@@ -10,8 +10,6 @@
 
 <title>Alterar Login</title>
 
-
-</head>
 <body>
 
 <div class="jumbotron jumbotron-fluid">
@@ -59,7 +57,7 @@ alert(" Alteração Realizada com Sucesso , Você receberá uma confirmação em
 }
 </script>
 </head>
-<body>
+
 <script>
 function funcao2()
 {
@@ -71,25 +69,11 @@ alert("!!!VOCÊ ACABAR DE SAIR DO PAINEL DE CADASTRO!!! ");
 
 <center>
 <p>
-     <a href="PaineldeEntrada.php"><button type="submit" class="btn btn-primary btn-sm"onclick="funcao1()"
+     <a href="PaineldeEntrada.html"><button type="submit" class="btn btn-primary btn-sm"onclick="funcao1()"
       value="Exibir Alert">Enviar</button></a>
-     <a href="PaineldeEntrada.php"><button type="submit" class="btn btn-secondary btn-sm"onclick="funcao2()"
+     <a href="PaineldeEntrada.html"><button type="submit" class="btn btn-secondary btn-sm"onclick="funcao2()"
       value="Exibir Alert">Sair</button></a>
  </p>     
  </center> 
-    </body>
-    </div>
-  </div>
-</form>
- 
-</span>
-
-</form>
-</div>
-
-</form>
-</form>
 </body>
 </html>
-  					  
-
