Formulário de Triagem

--- a/GerenciamentoRisco.html
+++ b/GerenciamentoRisco.html
@@ -13,8 +13,6 @@
   
 <title>GerenciamentoRisco</title>
 </head>
-<body>
-
 <h1 class="display-4"><center><img src="http://www.clker.com/cliparts/e/a/3/b/12422396261783581009Cruz_Roja.svg.med.png"
          alt="some text" width=200 height=200></center></h1>
          <p font face="sans-seriff"><Center><h2>Classificação De Risco</h2></center></p>
@@ -140,18 +138,18 @@ alert("!!!VOCÊ ACABAR DE SAIR DO PAINEL DE TRIAGEM!!! ");
 <p>
 <body>
 <center>
-     <a href="GerenciamentoRisco.php"><button type="submit" class="btn btn-primary btn-sm"onclick="funcao1()"
+     <a href="GerenciamentoRisco.html"><button type="submit" class="btn btn-primary btn-sm"onclick="funcao1()"
       value="Exibir Alert">Enviar Formulário</button></a>
   
     </body>
     <body>
-     <a href="PaineldeEntrada.php"><button type="submit" class="btn btn-secondary btn-sm"onclick="funcao2()"
+     <a href="PaineldeEntrada.html"><button type="submit" class="btn btn-secondary btn-sm"onclick="funcao2()"
       value="Exibir Alert">Sair</button></a>
  </center> 
     </body>
 </p>
     </div>
-  </div>
+  
 </form>
 <p>
 </p>
@@ -163,15 +161,5 @@ alert("!!!VOCÊ ACABAR DE SAIR DO PAINEL DE TRIAGEM!!! ");
 </p>
 <p>
 </p>
-
-
-</span>
-
-</form>
-</div>
-
-</form>
-</form>
 </body>
 </html>
-  					  
